# ChessCode

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  setup.cfg
.github/workflows/: ci-backend.yml  ci-frontend.yml
backend/: README.md  pyproject.toml  setup.cfg
backend/api/: apps.py  consumers.py  urls.py  utils.py  views.py
backend/api/accounts/: serializers.py  urls.py  views.py
backend/api/auth/: serializers.py  urls.py  views.py
backend/api/friends/: friend_requests.py  friends.py  models.py  urls.py  views.py
backend/api/play/: chess_board.py  consumers.py  game.py  game_modes.py  game_queue.py  models.py  player_colors.py  players.py  serializers.py  urls.py  utils.py  views.py
backend/api/user_interactions/: urls.py  views.py
backend/backend/: asgi.py  middleware.py  settings.py  urls.py  views.py
backend/templates/frontend/: index.html
backend/tests/unit/api/friends/: test_friends.py
backend/tests/unit/api/play/: test_game_queue.py  test_utils.py
backend/users/: models.py
frontend/: .gitignore  babel.config.json  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.js  webpack.config.js
frontend/src/: constants.ts  index.tsx
frontend/src/components/: app.tsx  constants.ts
frontend/src/css/: smoothPopupTransition.tsx
frontend/src/hooks/: appContext.ts  useAnimatedPopup.ts  useFriendsButton.tsx  useMousePosition.ts  useTimeElapsed.ts  useWaitingDots.ts  useWindowSize.ts
frontend/src/types/: friendStatuses.ts  game.ts
frontend/src/utils/: api.ts  chess.ts  (+5 more)
frontend/test/: mockWebSocket.ts
(+142 files in other folders)
