[options]
install_requires =
    django >= 3.2
    djangorestframework >= 3.12
    daphne >= 3.0
    channels >= 3.0
    chess >= 1.9
    djangorestframework-stubs >= 3.15
    mypy >= 1.11
    black >= 24.8
    pytest >= 8.3
    pytest-django >= 4.11
    whitenoise >= 6.9
    pytest-watch >= 4.2
python_requires = >=3.8
py_modules =